add question analytics and semantic groups
