# routes/api.php
@@ -9,6 +9,7 @@ Route::get('/documents', [DocumentController::class, 'index']);
 Route::get('/search', [DocumentController::class, 'search']);
 Route::post('/chat', ChatController::class);
 Route::post('/chat/stream', [ChatController::class, 'stream']);
+Route::get('/analytics/questions', [QuestionController::class, 'analytics']);
 Route::get('/questions', [QuestionController::class, 'index']);
 Route::post('/questions/{question}/feedback', [QuestionController::class, 'feedback']);
 Route::post('/questions/{question}/resolve', [QuestionController::class, 'resolve']);
